Class One Operators-1.txt
1) Python installation 
2) Operators in python 

      use of type funcion
	  How to assign a value to a variable 
     How to perform delete operation on a variable 
	 How to make use of Print statement and print values 
	  
	  
	  
Operators in python 
  Arithmetic operators (+,-,*,/,%,//,**)
  Relational operators  (>,<,>=,<=,!=,=)
  logical operators      (And , or ,NOT)
  bitwise operators   
  Assignment operators
  
  
  5)10(2
    10
	----
	0
	
  3)28(9
    27
	---
	1
	
	Relational operators
	 >,<,=,!=,>=,<=
	 
	Logical operators
	
	 And
	 Or
	 not 
	 
	 
	 True and true = True
	 true and false = false 
	 false and false = false 
	 false and true = false 
	 
	 true or true = true 
	 true or false = true 
	 false or true = true 
	 false or false = false 
	 
	 bitwsie operator
	 
	 & - bitwise And
     | - Bitwise OR
     ~ - Bitwise NOT
     ^ - Bitwise XOR 
     >> - right shift
     << - left shift 

    The core concept of bitwise operations are it converst decimal to binary and then will perform And operation between the binary digits 
	
	1001  
	0101
	-----
	0001
	
	1000
	1001
	------
	1001
	
	1010
	0101
	----
	0000- 1111
	
	1010
	0010
	
	
	C:\Users\navee>py
Python 3.8.5 (tags/v3.8.5:580fbb0, Jul 20 2020, 15:43:08) [MSC v.1926 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 2+3
5
>>> 5+5
10
>>> type(5)
<class 'int'>
>>> type("Ajay")
<class 'str'>
>>> type(5.2)
<class 'float'>
>>> type(5/2)
<class 'float'>
>>> type(5.567465348)
<class 'float'>
>>> type(True)
<class 'bool'>
>>> a=5
>>> type(a)
<class 'int'>
>>> print(a)
5
>>> del a
>>> print(a)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'a' is not defined
>>> print("Hello World")
Hello World
>>> print(input("Enter a name here:"))
Enter a name here:Naveen
Naveen
>>> print(input("What's the version of python:"))
What's the version of python:3.8.5
3.8.5
>>> 2+3
5
>>> 2+3+4+5+6+7+8+9
44
>>> 2+2.4
4.4
>>> -2+4
2
>>> -4+2
-2
>>> 2.4654645646-2.232432425
0.23303213960000013
>>> 5-2
3
>>> 5-4
1
>>> a,b=5,2
>>> a-b
3
>>> a=a-b
>>> print(a)
3
>>> a-b
1
>>> 4*5
20
>>> 5*5
25
>>> 10/5
2.0
>>> 1/4
0.25
>>> 1/0
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ZeroDivisionError: division by zero
>>> 10%5
0
>>> 28%3
1
>>> 1//4
0
>>> 10/5
2.0
>>> 10%5
0
>>> 10//5
2
>>> 7/3
2.3333333333333335
>>> 8/3
2.6666666666666665
>>> 7//3
2
>>> 8//3
2
>>> 666/43
15.488372093023257
>>> 666//43
15
>>> 5**5
3125
>>> 2**2
4
>>> 5**2
25
>>> 3**2
9
>>> 9**9
387420489
>>> 24>23
True
>>> 24>25
False
>>> 24>=23
True
>>> 24<=25
True
>>> 24!=24
False
>>> 24!=25
True
>>> 24 <> 25
  File "<stdin>", line 1
    24 <> 25
        ^
SyntaxError: invalid syntax
>>> 24<>25
  File "<stdin>", line 1
    24<>25
       ^
SyntaxError: invalid syntax
>>> x=True
>>> y=False
>>> x and y
False
>>> y and x
False
>>> y and y
False
>>> x and x
True
>>> x or x
True
>>> x or y
True
>>> y or y
False
>>> y or x
True
>>>
>>> not a
False
>>> not x
False
>>> not y
True
>>> 5%2
1
>>> 5/2
2.5
>>> 5 & 2
0
>>> 9 & 2
0
>>> 9&2
0
>>> 10&4
0
>>> ~9
-10
>>> 9&5
1
>>> 8&9
8
>>> 10&5
0
>>> 9|5
13
>>> 8|9
9
>>> 13|6
15
>>> ~0
-1
>>> ~10
-11
>>> 10>>2
2
>>> 2<<10
2048
>>> 10<<2
40
>>>
decimal 10
decimal 4
1 will be true 
0 will be false 
1010 
0100
-----
0000
------
1110- 14
0*2^0+1*2^1+0*2^2+1*2^3=0+2+0+8=10